--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -31,14 +31,14 @@ urlcolor: blue
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-This document explain the code to replicate the results in *Estimating Willingness to Pay for E85 in the United States Using an Intercept Survey of Flex Motorists* published in the *American Journal of Agricultural Economics*. The article provide the necessary information about data collection and thus we will not describe them in this document. 
+This document explain the code to replicate the results in *Estimating Willingness to Pay for E85 in the United States Using an Intercept Survey of Flex Motorists* published in the *American Journal of Agricultural Economics*. The article provide the necessary information about data collection and thus we will not describe them in this document.   
 
 ## Software requirements and folder structure 
 We generated figures and estimated regression models using R, which is available to download for free at <https://cran.r-project.org/>. We recommend using RStudio as an IDE. RStudio is available to download for free at <https://www.rstudio.com/> and one of its advantage is its ability to use an *R Project* which facilitates setting working directories and organizing files. Using RStudio, we recommend to first open the project file `Data and code.RProj`. Opening this file sets the working directory so that all code should run without issues related to file location.
 
 The R files to replicate the results in the paper are in the main folder. There are four subfolders to help organize other files.
 
-- Data: This subfolder contains the data. The file `SP-off-RP data.rds` contains the data in R format, and is the file data that is called by other files. The subfolder also contain the excel `SP-off-RP data.xlsx` for users interested in reading the data in a different format.
+- Data: This subfolder contains the data. The file `SP-off-RP data.rds` contains the data in R format, and is the file data that is called by other code files. The subfolder also contain the excel `SP-off-RP data.xlsx` for users interested in reading the data in a different format.
 - Figures: Figures are saved as `.png` files in this subfolder.
 - Results: Estimation results are saved in this subfolder as excel file. Results are also saved as `.RData` file for later use.
 - Code: This subfolder contains R files that are sourced by other files. These R files contain functions to estimate models and produce figures. We describe these files in a section below.
